--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,79 +1,46 @@
-html {
-
-}
-
 body {
-
-    background-color: lavender;
-    color: #545454;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    float: center;
-    color: #222;
-    font-weight: 600;
-    line-height: 1.3;
-    text-align: center;
-}
-
-h1 { 
-    color: palevioletred;
-}
-
-img {
-    align-content: center;
-    text-align: center;
-}
-
-.factlistclass {
-    color: palevioletred;
-    font-family: cursive;
-}
-
-nav {
-  width: 100%;
-  height: 38px;
-    text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
-    
-}
-
-nav a {
-    display: block;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
     font-family: sans-serif;
-    font-size: 14px;
-    color: ghostwhite;
-    background-color: cornflowerblue;
-    border: 1px solid #000;
-    padding-top: 20px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    text-decoration: none;
 }
 
+header {
+    display: flex;
+    align-items: center;
+    background-color: powderblue;
+}
 
-nav {
-    width: 100%;
-    display: block;
-    float: center;
+header nav {
+    flex: 1;
+}
+
+header nav ul {    
+    display: flex;
+    justify-content: flex-start;
+}
+
+header nav li {
+    list-style-type: none;
+    padding: 1em;
     font-family: sans-serif;
-    font-size: 14px;
-    color: ghostwhite;
-    background-color: cornflowerblue;
-    text-decoration: none;
-    width: 20px;
 }
 
-p {
-    text-align: center;
+
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: powderblue;
 }
 
-ul {
-    text-align: center;
+footer nav ul {    
+    display: flex;
+}
+
+footer nav li {
+    list-style-type: none;
+    font-size: .75em;
+    padding: 1em;
+    font-family: sans-serif;
 }
