--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: sans-serif;
+    background-color: lightyellow;
 }
 
 header {
