--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,6 +3,67 @@ body {
     flex-direction: column;
     font-family: sans-serif;
     background-color: lightyellow;
+    justify-content: space-between;
+}
+
+
+h1 { 
+    display: flex;
+    justify-content: space-around;
+}
+
+p {
+    display: flex;
+    justify-content: space-around;
+}
+
+h2 {
+    display: flex;
+    justify-content: space-around;
+}
+
+ul {
+    display: flex;
+    justify-content: space-around;
+}
+
+img {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.search {
+    flex: 1;
+}
+
+.container > li {
+    flex: 1;
+    justify-content: space-between;
+}
+
+nav {
+    font-family: sans-serif;
+    font-size: 14pt;
+    color: black;
+    list-style-type: none;
+    justify-content: space-between;
+}
+
+
+@media all and (max-width: 400px) {
+  .container > li {
+    flex-basis: 100%;
+  }
+  .search {
+    order: 1;
+  }
 }
 
 header {
