--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,8 +4,58 @@ body {
     font-family: sans-serif;
     background-color: lightyellow;
     justify-content: space-between;
+    width: 80%;
+    margin: 30px auto;
 }
 
+#paragraph1 {
+    font-family: sans-serif;
+}
+
+
+a:link {
+    color: #000000;
+}
+
+a:visited {
+    color: purple;
+}
+
+
+a:hover {
+    color: cornflowerblue;
+}
+
+a:active {
+    color: paleturquoise;
+}
+
+div {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+a {
+  display: inline-block;
+  margin-bottom: 8px;
+  width: calc(50% - 4px);
+  margin-right: 8px;
+  text-decoration: none;
+  color: black;
+}
+
+a:nth-of-type(2n) {
+  margin-right: 0;
+}
+
+@media screen and (min-width: 50em) {
+  a {
+    width: calc(25% - 6px);
+  }
+    
+a:hover img {
+  transform: scale(1.15);
+}
 
 h1 { 
     display: flex;
@@ -16,10 +66,56 @@ p {
     display: flex;
     justify-content: space-around;
 }
+    
+    .baby {
+        justify-content: space-between;
+    }
+    
+figcaption {
+  margin-top: 15px;
+}
 
+img {
+  border: none;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  background: #ccc;
+  transition: transform .2s ease-in-out;
+}
+
+.p a {
+  display: inline;
+  font-size: 13px;
+  margin: 0;
+  text-decoration: underline;
+  color: blue;
+}
+
+.p {
+  text-align: center;
+  font-size: 13px;
+  padding-top: 100px;
+}
+
+    .front {
+        align-content: center;
+        justify-content: center;
+        justify-content: space-around;
+    }
+    
+    
 h2 {
     display: flex;
     justify-content: space-around;
+}
+
+
+h3 {
+  text-align: center;
+  font-size: 1.65em;
+  margin: 0 0 30px;
+padding-top: 30px;
 }
 
 ul {
@@ -30,6 +126,7 @@ ul {
 img {
     display: flex;
     justify-content: space-around;
+    align-content: center;
 }
 
 
@@ -87,6 +184,91 @@ header nav li {
     font-family: sans-serif;
 }
 
+
+.Adventure1 {
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
+
+}
+
+.Adventure2 {
+       width: 150px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
+   
+}
+
+.Adventure3 {
+       width: 150px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
+
+}
+
+.Adventure4 {
+       width: 150px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
+
+}
+
+
+.ColumnContainer {
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   flex-flow: column wrap;
+   align-content: space-around;
+}
+
+.AdventureContainer {
+   display: flex;
+    padding-top: 30px;
+    align-content: flex-start;
+}
+
+.AdventureContainer2 {
+   display: flex;
+   padding-top: 30px;
+    align-content: flex-end;
+}
+
+.Facts {
+    background-color: aliceblue;
+    justify-content: center;
+    width: block;
+}
+
+.RowOne {
+    align-content: flex-start;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.Row2 {
+    align-content: flex-end;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.HH_Container {
+    display: flex;
+    align-content: center;
+    padding-top: 30px;
+}
 
 
 footer {
